--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -212,9 +212,14 @@ body {
 	display: none;
 	position: absolute;
 	align-items: center;
+	vertical-align: middle;
 	height: 100%;
 	width: 100%;
 	padding: 0 10px;
+}
+
+.add-task form {
+	width: 100%;
 }
 
 .add-task input[type='text'] {
@@ -223,11 +228,31 @@ body {
 	font-size: 100%;
 	background-color: transparent;
 
-	width: 85%;
+	width: 80%;
 }
 
 .add-task input[type='text']:focus {
 	outline: none;
+}
+
+form button {
+	display: inline-block;
+	vertical-align: middle;
+	padding: 3px;
+	width: 25px;
+	height: 25px;
+	background-color: transparent;
+	border: none;
+}
+
+.submit-button ion-icon {
+	font-size: 120%;
+	color: var(--gray);
+}
+
+.submit-button ion-icon:hover {
+	font-size: 120%;
+	color: #000;
 }
 
 /* Task item */
@@ -253,12 +278,18 @@ body {
 .task h4 {
 	display: inline-block;
 	line-height: 150%;
+	width: 70%;
 	height: 100%;
 	vertical-align: middle;
 	margin-top: 1.5%;
+	margin-left: 10px;
 
 	font-size: 100%;
 	font-weight: 400;
+}
+
+.task__delete-button:hover {
+	cursor: pointer;
 }
 
 /* Checkbox */
